--- a/css/settings.css
+++ b/css/settings.css
@@ -1,16 +1,15 @@
 #settings-container {
     width: 100%;
-    height: 100%;
-    margin-top: 50px;
+    margin-top: 40px;
 }
 
 #settings-inner-container {
     width: 400px;
     margin: 0 auto;
     border: 1px solid white;
-    padding: 15px;
+    padding: 10px;
     margin-right: auto;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(255, 255, 255, 0.05);
     border: 1px solid rgba(255, 255, 255, 0);
     border-radius: 1px;
     text-align: center;
@@ -47,6 +46,7 @@
 
 .settings-row:nth-child(odd) {
     background-color: rgba(255, 255, 255, 0.1);
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.17), rgba(0, 0, 0, 0.05));
 }
 
 .settings-row-label {
