--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -52,12 +52,12 @@ h1 {
 	color: #FFF;
 	font-size: 50px;
 	text-align: center;
-	margin: -5px auto 50px auto;
+	margin: -5px auto 30px auto;
 	text-shadow: 0px 0px 13px rgba(0, 0, 0, 0.3);
     font-family: "Alegreya Sans";
 	width: 100%;;
 	border-radius: 3px;
-	padding: 40px 0 0px 0;
+	padding: 30px 0 0px 0;
     /*background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5));
     background-color: rgba(214, 10, 10, 0);
 	box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.0);*/
